--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,59 +2,36 @@ body {
     background-image: url(../images/background.jpg);
 }
 
-
-#holder {
-    background-color: blueviolet;
-}
-
-#enemies {
-    background-color: black;
-}
-
-#logo {
-    width: 400px;
-    height: 150px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 30%;
-}
  
-
-
-#neneL {
-    background-color: blue;
-    max-width: 180px;
-    max-height: 400px;
-    margin-right: 30px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    opacity: 50%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    
+#game-start{
+    display: flex;
+    justify-content: space-around;
 }
 
 
-#kimZ {
-    background: pink;
-    max-width: 180px;
-    max-height: 400px;
+
+
+.player-name {
+    background: linear-gradient(101deg, #dac54c, #8d7f2f);
+   text-align: center;
     margin-right: 30px;
     padding-top: 10px;
     padding-bottom: 10px;
-    opacity: 50%;
+   width: 200px;
     display: block;
     margin-left: auto;
     margin-right: auto;
+    font-family: "Alex Brush";
+    font-size: 187%;
+    border-radius: 3px;
+    color: rgb(255, 255, 255);
   
 }
 
-#shereeW {
-    background: orange;
-    max-width: 180px;
-    max-height: 400px;
+.player-img{
+    
+  height: 250px;
+  width: 220px;
     margin-right: 30px;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -64,21 +41,44 @@ body {
     margin-right: auto;
 }
 
-#kenyaMD {
-    background: yellow;
-    max-width: 180px;
-    max-height: 400px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+.player-health {
+
+    text-align: center;
+  margin-top: -5%;
     display: block;
     margin-left: auto;
     margin-right: auto;
+    width: 200px;
+    font-family: "Alex Brush";
+    font-size: 200%;
+    color: white;
+    background-color: #dac54c;
+   
 }
 
-#holder, img {
-    width: 150px;
-    
-    
+.player-health-label{
+    color: white;
+    text-transform: uppercase;
+    text-align: center;
+    margin-top: -10px;
+    font-size: 8px;
+}
+#defender {
+
+    float: right;
+}
+
+#logo{
+    width: 80%;
+    margin-left: 30%;
+}
+
+#a-message{
+    margin-left: 15%;
+    color: red;
+    font-family: "Share tech mono";
+    margin-top: 10%;
+    font-size: 20px;
 }
 
 .name {
@@ -92,11 +92,29 @@ color: white;
 text-align: center; 
 }
 
-#defender {
+#available-defenders {
    
-    background-color: brown;
+    display: flex;
+    justify-content: flex-start;
 }
 
 #fight {
     background-color: white;
+}
+
+
+
+#attack-btn{
+    border-radius: 50px;
+    width: 100px;
+    height: 100px;
+margin-left: 50%;
+margin-top: 15%;
+ font-family: "Permanent Marker";
+ font-size: 18px;
+    position: absolute;
+    background:linear-gradient(61deg, #da4c4c, #8d352f);
+    border: none;
+    color: white;
+
 }
